RESOLVED FIXED139535
[GTK] Fix Build Warning in WebKit2/UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=139535
Summary [GTK] Fix Build Warning in WebKit2/UIProcess module
Rohit
Reported 2014-12-11 04:20:37 PST
Unused variable warning in WebKit2/UIProcess/API/gtk/WebKitWebView.cpp file and Source/WebKit2/NetworkProcess/soup/NetworkProcessSoup.cpp file. [351/405] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/API/gtk/WebKitWebView.cpp.o ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:581:17: warning: unused parameter ‘webView’ [-Wunused-parameter] static gboolean webkitWebViewShowNotification(WebKitWebView* webView, WebKitNotification* webNotification) ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:605:17: warning: unused parameter ‘webView’ [-Wunused-parameter] static gboolean webkitWebViewCloseNotification(WebKitWebView* webView, WebKitNotification* webNotification) ../../Source/WebKit2/NetworkProcess/soup/NetworkProcessSoup.cpp:148:6: warning: unused parameter ‘modifiedSince’ [-Wunused-parameter] void NetworkProcess::clearDiskCache(std::chrono::system_clock::time_point modifiedSince, std::function<void ()> completionHandler) ^ ../../Source/WebKit2/NetworkProcess/soup/NetworkProcessSoup.cpp:148:6: warning: unused parameter ‘completionHandler’ [-Wunused-parameter]
Attachments
Patch (2.33 KB, patch)
2014-12-11 04:33 PST, Rohit
no flags
Patch (1.43 KB, patch)
2014-12-11 05:20 PST, Rohit
no flags
Rohit
Comment 1 2014-12-11 04:33:08 PST
Rohit
Comment 2 2014-12-11 05:16:45 PST
NetworkProcess.cpp build warning is fixed in another bug https://bugs.webkit.org/show_bug.cgi?id=139534
Rohit
Comment 3 2014-12-11 05:20:10 PST
WebKit Commit Bot
Comment 4 2014-12-12 08:58:37 PST
Comment on attachment 243119 [details] Patch Clearing flags on attachment: 243119 Committed r177224: <http://trac.webkit.org/changeset/177224>
WebKit Commit Bot
Comment 5 2014-12-12 08:58:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.