Fix Build Warning in WebKit2/UIProcess module for GTK build and WebKit2/NetworkProcess module in GTK and EFL build https://bugs.webkit.org/show_bug.cgi?id=139535

Patch by Rohit Kumar <kumar.rohit@samsung.com> on 2014-12-12
Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitWebView.cpp: Use UNUSED_PARAM for conditional #if case
(webkitWebViewShowNotification):
(webkitWebViewCloseNotification):

Canonical link: https://commits.webkit.org/157464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177224 268f45cc-cd09-0410-ab3c-d52691b4dbfc